@@ -1,7 +1,7 @@
 /*
  *  This file is part of Poedit (http://www.poedit.net)
  *
- *  Copyright (C) 2001-2007 Vaclav Slavik
+ *  Copyright (C) 2001-2008 Vaclav Slavik
  *
  *  Permission is hereby granted, free of charge, to any person obtaining a
  *  copy of this software and associated documentation files (the "Software"),
@@ -40,12 +40,15 @@
 #include "edlistctrl.h"
 
 // The word separators used when doing a "Whole words only" search
+// FIXME-ICU: use ICU to separate words
 static const wxString SEPARATORS = wxT(" \t\r\n\\/:;.,?!\"'_|-+=(){}[]<>&#@");
+
+wxString FindFrame::ms_text;
 
 BEGIN_EVENT_TABLE(FindFrame, wxFrame)
    EVT_BUTTON(XRCID("find_next"), FindFrame::OnNext)
    EVT_BUTTON(XRCID("find_prev"), FindFrame::OnPrev)
-   EVT_BUTTON(wxID_CANCEL, FindFrame::OnCancel)
+   EVT_BUTTON(wxID_CLOSE, FindFrame::OnCancel)
    EVT_TEXT(XRCID("string_to_find"), FindFrame::OnTextChange)
    EVT_CHECKBOX(-1, FindFrame::OnCheckbox)
    EVT_CLOSE(FindFrame::OnClose)
@@ -75,6 +78,13 @@ FindFrame::FindFrame(wxWindow *parent,
 
     m_btnNext = XRCCTRL(*this, "find_next", wxButton);
     m_btnPrev = XRCCTRL(*this, "find_prev", wxButton);
+
+    if ( !ms_text.empty() )
+    {
+        wxTextCtrl *t = XRCCTRL(*this, "string_to_find", wxTextCtrl);
+        t->SetValue(ms_text);
+        t->SetSelection(0, ms_text.length()-1);
+    }
 
     Reset(c);
 
@@ -128,8 +138,8 @@ void FindFrame::Reset(Catalog *c)
                                              wxLIST_NEXT_ALL,
                                              wxLIST_STATE_SELECTED);
 
-    m_btnPrev->Enable(!!m_text);
-    m_btnNext->Enable(!!m_text);
+    m_btnPrev->Enable(!ms_text.empty());
+    m_btnNext->Enable(!ms_text.empty());
 }
 
 
@@ -146,7 +156,8 @@ void FindFrame::OnCancel(wxCommandEvent &event)
 
 void FindFrame::OnTextChange(wxCommandEvent &event)
 {
-    m_text = XRCCTRL(*this, "string_to_find", wxTextCtrl)->GetValue();
+    ms_text = XRCCTRL(*this, "string_to_find", wxTextCtrl)->GetValue();
+
     Reset(m_catalog);
 }
 
@@ -225,7 +236,7 @@ bool FindFrame::DoFind(int dir)
 
     FoundState found = Found_Not;
     wxString textc;
-    wxString text(m_text);
+    wxString text(ms_text);
 
     if (!caseSens)
         text.MakeLower();
