@@ -1,4 +1,8 @@
 
+
+- remember last used search phrase in Find window (#1909847)
+
+
 Version 1.4
 -----------
 
